--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -3,7 +3,7 @@ FROM node:8
 # Create app directory
 WORKDIR /usr/src/app
 
-COPY package*.json ./
+#COPY package*.json ./
 
 RUN npm install -S request
 RUN npm install -S express
