--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /usr/src/app
 
 COPY package*.json ./
 
-RUN npm install -S request
+#RUN npm install -S request
 RUN npm install -S express
 #RUN npm install winston winston-daily-rotate-file date-utils winston-timestamp-colorize
 
