--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -7,6 +7,7 @@ COPY package*.json ./
 
 RUN npm install -S express
 RUN npm install -S python-shell
+RUN npm install winston winston-daily-rotate-file date-utils winston-timestamp-colorize
 
 COPY . .
 
