--- a/cdk-stable-diffusion/package.json
+++ b/cdk-stable-diffusion/package.json
@@ -20,8 +20,9 @@
     "typescript": "~4.9.4"
   },
   "dependencies": {
-    "aws-cdk-lib": "^2.59.0",
+    "aws-cdk-lib": "^2.63.2",
     "constructs": "^10.0.0",
+    "path": "^0.12.7",
     "source-map-support": "^0.5.21"
   }
 }
